--- a/docs/todo
+++ b/docs/todo
@@ -1,22 +1,18 @@
 Utiliser redux
 utiliser next
+utiliser sequelize
 utiliser la convention de nomage BEM et de l'anglais partout
 
 dans le form d'inscription : 
 Ajouter des animations sur les onglets, quand il change, quand on clique sur celui déjà ouvert etc
 rajotuer les messages d'erreurs
-si possible, enlever la logique du jsx, la mettre ailleurs
 supprimer le node_modules dans le back end sur le repo github
 ranger tous les fichiers les rendre joli
 
 
-      demander comment faire pour que par défaut quand on arrive sur la page d'accueil, on arrive sur l'url "/" qui correspond à la page du fil d'actualité, mais si on est pas connecté et uniquement dans ce cas, rediriger avec react-router-dom sur la page de connexion
       Demander pour un scroll infini sur page newsfeed
-      Demander si y a pas meilleure facon que d'importer settings a chaque form
-  
-      Demander comment faire style conditionnel notamment le input container le mettre en width 100% sur le newsfeed mais laisser 80 en page de connexion
-      Demander si y a pas une meilleure facçon de mettre les icones en props
-      Demander comment passer prop child to parent
-      dans whatsup, mieux vaut utiliser un "icon alone" ou bienmettre les icones en props dans input ?
+       Demander comment passer prop child to parent
+
       importer le module db dans le controllers post.js sans le re déclarer
       Demander pourquoi dans publications.js, si j'initialise le state à null ça marche pas, mais si je l'initialise en tant que tableau vide, ça marche
+      Demander pourquoi je peux pas passer les props vers mes posts
