Les données sont bien importées dynamiquement

--- a/docs/todo
+++ b/docs/todo
@@ -8,7 +8,7 @@ Ajouter des animations sur les onglets, quand il change, quand on clique sur cel
 rajotuer les messages d'erreurs
 supprimer le node_modules dans le back end sur le repo github
 ranger tous les fichiers les rendre joli
-
+faire le README
 
       Demander pour un scroll infini sur page newsfeed
        Demander comment passer prop child to parent
