Problème de promise résolue même si j'ai pas tout compris, j'ai juste supprimer un composant post dans le render de posts.js. Problème au niveau du back résolu aussi, maintenant la bdd peut recevoir de nouveau post depuis le front et le front les affichera après un refresh de la page

--- a/docs/todo
+++ b/docs/todo
@@ -1,7 +1,7 @@
 Utiliser redux
 utiliser next
 utiliser sequelize
-utiliser la convention de nomage BEM et de l'anglais partout
+reprendre tous les fichiers pour utiliser la convention de nomage BEM et de l'anglais partout
 
 dans le form d'inscription : 
 Ajouter des animations sur les onglets, quand il change, quand on clique sur celui déjà ouvert etc
@@ -10,9 +10,11 @@ supprimer le node_modules dans le back end sur le repo github
 ranger tous les fichiers les rendre joli
 faire le README
 
-      Demander pour un scroll infini sur page newsfeed
-       Demander comment passer prop child to parent
+ Demander comment passer prop child to parent
 
       importer le module db dans le controllers post.js sans le re déclarer
       Demander pourquoi dans publications.js, si j'initialise le state à null ça marche pas, mais si je l'initialise en tant que tableau vide, ça marche
       Demander comment améliorer le code de post.js (ternaire ? async await ?)
+      pour les dates, demander pourquoi il y a un T et un Z, et demander si c'est ici que je dois utiliser dayjs / moment JS, ou si c'est dans le front
+      Demander aussi pourquoi je n'arrive pas, dans node, à faire un req.body pour récupérer les données de manière dynamique
+      pour trier les posts dans l'ordre chronologique, filter en js ou bien depuis une commande sql ?
