Les commentaires s'affichent (tester avec un seul, continuer a améliorer)

--- a/docs/todo
+++ b/docs/todo
@@ -28,3 +28,20 @@ faire le README
       demander si l'id des posts ne serait pas mieux si il était chiffré plutpt que être simpleent dans l'ordre 1 2 3 4...
       Bloqué : récup le state d'un composant enfant pour l'utiliser dans le parent
       Dans la fonction login du controller user, c'est la bonne manière de faire ?
+
+
+Faire en sorte d'intégrer les commentaires aux posts correspondant
+
+
+
+
+requete : SELECT * FROM commentaire, posts WHERE commentaire.post_id = posts.id AND posts.id = 130
+(peut enlever les AS)
+
+Se renseigner sur indexation d'une table
+réparer le res.redirect
+traiter l'erreur qu'il y a quand on affiche la page d'accueil sans avoir de données dans le localstorage
+Faire toute l'intégration (design) d'un post type avec l'input pour écrire un commentaire, les boutons like, dislike, etc...
+Photo de profil pour chaque user doit fonctionner
+CRUD user
+Menu de naviguation design
